--- a/css/css.css
+++ b/css/css.css
@@ -83,7 +83,6 @@ li a {
     width: 513px;
     height: 61px;
     left: 59px;
-    top: 354px;
     font-family: UTM BryantLG;
     font-style: normal;
     font-weight: normal;
@@ -97,7 +96,6 @@ li a {
     width: 395px;
     height: 61px;
     left: 60px;
-    top: 406px;
     font-family: UTM BryantLG;
     font-style: normal;
     font-weight: bold;
@@ -110,7 +108,6 @@ li a {
     width: 249px;
     height: 50px;
     left: 60px;
-    top: 477px;
     font-family: UTM BryantLG;
     font-style: normal;
     font-weight: normal;
@@ -124,7 +121,6 @@ li a {
     width: 377px;
     height: 70px;
     left: 60px;
-    top: 553px;
     background: #B2D235;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 35px;
@@ -141,6 +137,14 @@ li a {
     line-height: 70px;
 }
 
+.start-learning a {
+    text-decoration: none;
+}
+
+.start-learning a:hover {
+    color: #ffffff;
+}
+
 .banner1 {
     position: absolute;
     padding-top: 200px;
@@ -152,7 +156,6 @@ li a {
     width: 360px;
     height: 190px;
     left: 1047px;
-    top: 609px;
     background: #FFFFFF;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
     border-radius: 23px;
@@ -164,7 +167,6 @@ li a {
     width: 63px;
     height: 16px;
     left: 1112px;
-    top: 622px;
     font-family: Open Sans;
     font-style: normal;
     font-weight: 600;
@@ -179,7 +181,6 @@ li a {
     width: 256px;
     height: 53px;
     left: 1097px;
-    top: 642px;
     background: #F1F0F0;
     border-radius: 15px;
     line-height: 53px;
@@ -190,7 +191,6 @@ li a {
     width: 276px;
     height: 37px;
     left: 1088px;
-    top: 718px;
     background: #3184F7;
     border-radius: 10px;
     line-height: 37px;
@@ -201,7 +201,6 @@ li a {
     width: 208px;
     height: 16px;
     left: 1123px;
-    top: 761px;
     font-family: Open Sans;
     font-style: normal;
     font-weight: 600;
@@ -211,4 +210,15 @@ li a {
     letter-spacing: -0.02em;
     color: #B3B3B3;
     text-align: center;
+}
+
+.body1::after {
+    content: "asfds";
+    visibility: hidden;
+    clear: both;
+}
+
+.body1 {
+    top: 805px;
+    height: 600px;
 }
