--- a/css/css.css
+++ b/css/css.css
@@ -1,163 +1,161 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
+/* start header */
+
 .header {
-    position: absolute;
-    width: 1440px;
-    height: 150px;
-    left: 0px;
-    top: 0px;
-    font-size: 22px;
-    line-height: 150px;
-    float: right;
+  position: absolute;
+  width: 1440px;
+  height: 150px;
+  left: 0px;
+  top: 0px;
+  font-size: 22px;
+  line-height: 150px;
+  float: right;
 }
 
 .logo {
-    position: absolute;
-    left: 4.17%;
-    right: 72.21%;
-    top: 24%;
-    bottom: 29.33%;
+  position: absolute;
+  left: 4.17%;
+  right: 72.21%;
+  top: 24%;
+  bottom: 29.33%;
 }
 
 .navbar {
-    width: 650px;
-    height: 50px;
-    list-style-type: none;
-    color: #000000;
-    font-size: 17px;
-    line-height: 50px;
-    list-style-type: none;
-    float: right;
-    margin: 0;
-    padding: 65px 106px;
-    left: 4.17%;
-    right: 72.21%;
-    top: 43.33%;
-    bottom: 44%;
-    display: flex;
+  width: 650px;
+  height: 50px;
+  list-style-type: none;
+  color: #000000;
+  font-size: 17px;
+  line-height: 50px;
+  list-style-type: none;
+  float: right;
+  margin: 0;
+  padding: 65px 106px;
+  left: 4.17%;
+  right: 72.21%;
+  top: 43.33%;
+  bottom: 44%;
+  display: flex;
 }
 
 .header::after {
-    content: "asfds";
-    visibility: hidden;
-    clear: both;
+  content: "asfds";
+  visibility: hidden;
+  clear: both;
 }
 
 li {
-    padding-right: .5rem;
-    padding-left: .5rem;
+  padding-right: .5rem;
+  padding-left: .5rem;
 }
 
 li a:hover {
-    border: 1px solid #03a9f4;
+  border: 1px solid #03a9f4;
 }
 
 li a {
-    text-decoration: none;
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    text-transform: uppercase;
-    color: #000000;
+  text-decoration: none;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #000000;
 }
 
-#courses {
-    background: #B2D235;
-    border-radius: 17px;
+.courses {
+  background: #B2D235;
+  border-radius: 17px;
 }
+
+/* end header */
+
+/* start banner */
 
 .banner {
-    background-image: url("../images/rectangle.png");
-    position: relative;
-    width: 1440px;
-    height: 655px;
-    left: 0px;
-    top: 150px;
+  background-image: url("../images/rectangle.png");
+  position: absolute;
+  width: 1440px;
+  height: 655px;
+  left: 0px;
+  top: 150px;
+}
+
+.font-utm {
+  font-family: UTM BryantLG;
+  src: url('../font/UTM BryantLG.ttf');
 }
 
 .learn {
-    width: 513px;
-    height: 61px;
-    left: 59px;
-    font-family: UTM BryantLG;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 50px;
-    line-height: 61px;
-    letter-spacing: -0.05em;
-    color: #11114E;
+  width: 513px;
+  height: 61px;
+  left: 59px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 50px;
+  line-height: 61px;
+  letter-spacing: -0.05em;
+  color: #11114E;
 }
 
-.learn1 {
-    width: 395px;
-    height: 61px;
-    left: 60px;
-    font-family: UTM BryantLG;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 50px;
-    line-height: 61px;
-    color: #11114E;
+.learn-hapo {
+  width: 395px;
+  height: 61px;
+  left: 60px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 61px;
+  color: #11114E;
 }
 
-.learn2 {
-    width: 249px;
-    height: 50px;
-    left: 60px;
-    font-family: UTM BryantLG;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 25px;
-    letter-spacing: -0.05em;
-    color: #505353;
+.learn-lessons {
+  width: 249px;
+  height: 50px;
+  left: 60px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 25px;
+  letter-spacing: -0.05em;
+  color: #505353;
 }
 
 .start-learning {
-    width: 377px;
-    height: 70px;
-    left: 60px;
-    background: #B2D235;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 35px;
-    font-family: UTM BryantLG;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 30px;
-    line-height: 37px;
-    /* identical to box height */
-    letter-spacing: -0.05em;
-    color: #FFFFFF;
-    border: 0.3px solid #FFFFFF;
-    text-align: center;
-    line-height: 70px;
+  width: 377px;
+  height: 70px;
+  left: 60px;
+  background: #B2D235;
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 35px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 37px;
+  letter-spacing: -0.05em;
+  color: #FFFFFF;
+  border: 0.3px solid #FFFFFF;
+  text-align: center;
+  line-height: 70px;
 }
 
 .start-learning a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .start-learning a:hover {
-    color: #ffffff;
+  color: #ffffff;
 }
 
-.banner1 {
-    position: absolute;
-    padding-top: 200px;
-    padding-left: 95px;
+.banner-left {
+  padding-top: 200px;
+  padding-left: 95px;
 }
+/* end banner */
 
-.body1::after {
-    content: "asfds";
-    visibility: hidden;
-    clear: both;
-}
 
-.body1 {
-    top: 805px;
-    height: 600px;
-}
+
