--- a/css/css.css
+++ b/css/css.css
@@ -35,10 +35,6 @@
   float: right;
   margin: 0;
   padding: 65px 106px;
-  left: 4.17%;
-  right: 72.21%;
-  top: 43.33%;
-  bottom: 44%;
   display: flex;
 }
 
@@ -59,10 +55,7 @@ li a:hover {
 
 li a {
   text-decoration: none;
-  font-family: Open Sans;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
+  font:bold 14px Open Sans;
   text-transform: uppercase;
   color: #000000;
 }
@@ -85,8 +78,8 @@ li a {
   top: 150px;
 }
 
-.font-utm {
-  font-family: UTM BryantLG;
+@font-face {
+  font-family: 'UTM BryantLG';
   src: url('../font/UTM BryantLG.ttf');
 }
 
@@ -94,8 +87,6 @@ li a {
   width: 513px;
   height: 61px;
   left: 59px;
-  font-style: normal;
-  font-weight: normal;
   font-size: 50px;
   line-height: 61px;
   letter-spacing: -0.05em;
@@ -106,9 +97,7 @@ li a {
   width: 395px;
   height: 61px;
   left: 60px;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 50px;
+  font: bold 50px 'UTM BryantLG';
   line-height: 61px;
   color: #11114E;
 }
@@ -117,9 +106,7 @@ li a {
   width: 249px;
   height: 50px;
   left: 60px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
+  font: 20px 'UTM BryantLG';
   line-height: 25px;
   letter-spacing: -0.05em;
   color: #505353;
@@ -132,9 +119,7 @@ li a {
   background: #B2D235;
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 35px;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 30px;
+  font: bold 30px 'UTM BryantLG'; 
   line-height: 37px;
   letter-spacing: -0.05em;
   color: #FFFFFF;
@@ -152,8 +137,7 @@ li a {
 }
 
 .banner-left {
-  padding-top: 200px;
-  padding-left: 95px;
+  padding: 200px 0 0 95px;
 }
 /* end banner */
 
