--- a/css/css.css
+++ b/css/css.css
@@ -5,12 +5,12 @@
 
 @font-face {
   font-family: 'UTM BryantLG';
-  src: url('../font/UTM BryantLG.ttf');
+  src: url('../fonts/UTM-BryantLG.ttf');
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../font/Open Sans.woff');
+  src: url('../fonts/Open-Sans.woff');
 }
 
 /* start header */
@@ -56,7 +56,7 @@ li {
 }
 
 li:hover{
-  border: 1px solid #03a9f4;
+
   background: #B2D235;
   border-radius: 17px;
 }
@@ -107,6 +107,7 @@ li a {
   line-height: 25px;
   letter-spacing: -0.05em;
   color: #505353;
+  padding: 10px 0 26px 0  ;
 }
 
 .start-learning {
@@ -148,9 +149,24 @@ li a {
   right: 60px;
   z-index: 1;
 }
+
 .toggle-class {
   display: none;
 }
+
+.messenger {
+  background-color: #2774DF;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+}
+
 .block-chat {
   width: 360px;
   height: 190px;
@@ -160,20 +176,24 @@ li a {
   display: flex ;
   flex-direction: row;
 }
+
 .img-hapo {
   width: 28px;
   height: 28px;
   margin: 17% 0 0 5%;
 }
+
 .block-content {
   display: flex;
   flex-direction: column;
 }
+
 .web-name {
   font: 600 12px;
   color: #7F7F7F;
   margin: 5% 0 0 8% ;
 }
+
 .block-alert {
   background-color: #F1F0F0;
   width: 256px;
@@ -183,10 +203,12 @@ li a {
   display: flex;
   align-items: center;
 }
+
 .text-alert {
   color: #505353;
   margin-left: 8%;
 }
+
 .login-mess {
   width: 276px;
   height: 37px;
@@ -197,20 +219,24 @@ li a {
   align-items: center;
   justify-content: center;
 }
+
 .img-mess {
   width: 17px;
   height: 17px;
 }
+
 .txt-login {
   text-align: center;
   color: #FFFFFF;
   margin-left: 3%;
 }
+
 .txt-chat {
   text-align: center;
   color: #B3B3B3;
   margin-top: 3.5%;
 }
+
 span.close {
   background-color: #C4C4C4;
   width: 24px;
@@ -223,6 +249,7 @@ span.close {
   justify-content: center;
   cursor: pointer;
 }
+
 
 
 /* end banner */
@@ -550,7 +577,7 @@ span.close {
   text-align: center;
   letter-spacing: -0.02em;
   color: #FFFFFF;
-  margin: 0 368px;
+  margin: 0 360px;
 }
 .body-start-learning-button {
   width: 377px;
